tests/paczka1/small_fuzzy/10867976.err
Error in line 2: dzwtH A2
Error in line 3: 7 
Error in line 5: ,3
Error in line 7: A985 A217 70,1
